deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: nginx-deployment

spec:
  replicas: 3

  selector:
    matchLabels:
      app: nginx

  template:
    metadata:
      labels:
        app: nginx

    spec:
      containers:
        - name: nginx-container
          image: nginx:1.27

          ports:
            - containerPort: 80

          volumeMounts:
            - name: nginx-storage
              mountPath: /usr/share/nginx/html/data

          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10

          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 3
            periodSeconds: 5

      volumes:
        - name: nginx-storage
          persistentVolumeClaim:
            claimName: nginx-pvc
